--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  font_awesome_flutter: ^9.2.0
+  google_sign_in: ^5.2.1
+  http: ^0.13.4
+
 
 dev_dependencies:
   flutter_test:
