--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,9 +34,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  connectivity: ^3.0.6
+  email_validator: ^2.0.1
+  adaptive_dialog: ^1.1.0
+  shared_preferences: ^2.0.8
   font_awesome_flutter: ^9.2.0
   google_sign_in: ^5.2.1
   http: ^0.13.4
+  flutter_rating_bar: ^4.0.0
 
 
 dev_dependencies:
